--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,8 @@
     "aos": "^2.3.4",
     "axios": "^1.11.0",
     "daisyui": "^5.0.47",
+    "lucide-react": "^0.539.0",
+    "nodemon": "^3.1.10",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.7.1",
