--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "multer": "^2.0.2",
     "nodemon": "^3.1.10",
     "react-toastify": "^11.0.5",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "streamifier": "^0.1.1"
   }
 }
